flatpak-builder: Autospec creation for update from version 1.0.1 to version 1.0.9
Alexander Larsson (35):
      Set SOURCE_DATE_EPOCH to the mtime of the manifest
      post-process: Handle python 3.7 header formats
      yaml: Allow null nodes, for example as dict values
      build-options: Allow null values to unset env vars
      Allow overriding SOURCE_DATE_EPOCH via env option
      Update NEWS for release
      Update version to 1.0.2
      CI: Add dconf-devel
      utils: Add flatpak_variant_[un]compress helpers
      Compress changes when stored in cache commit metadata
      manifest: Add default-branch key
      Update NEWS for release
      Bump version to 1.0.3
      Add --add/remove-tag options
      Bump version to 1.0.4
      Update NEWS for release
      Fixup error messages
      Fix handling of sdk default compiler options
      Update for release
      Bump version to 1.0.5
      Move flatpak_version_check to builder-utils.c
      install-deps: Pass --noninteractive for flatpak >= 1.2.0
      Update NEWS for release
      Bump version to 1.0.6
      Update platform creation to ensure good mtimes and better cacheing
      CI: Add fuse-devel buildreq
      Bump version to 1.0.7
      Update NEWS for release
      Bump version to 1.0.8
      Update NEWS for 1.0.8
      Support --show-manifest
      module: Add builder_module_set_name()
      Support duplicate module names
      Bump version to 1.0.9
      Update NEWS for 1.0.9

Bastien Nocera (1):
      docs: Fix default value for script source's "dest-filename"

Christian Hergert (1):
      utils: force exit host commands when flatpak-builder exits

Linus Jahn (1):
      source-git: Add option to disable submodules

Marius Gedminas (1):
      Mention YAML as an alternative manifest format

Mathieu Bridon (3):
      from-git: Fetch the submodules as well
      from-git: Check out the whole tree instead of just the manifest
      Remove builder_git_checkout_dir

Mathieu Velten (1):
      manifest: us

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = flatpak-builder
-url = https://github.com/flatpak/flatpak-builder/releases/download/1.0.1/flatpak-builder-1.0.1.tar.xz
+url = https://github.com/flatpak/flatpak-builder/releases/download/1.0.9/flatpak-builder-1.0.9.tar.xz
 archives = 
 giturl = https://github.com/flatpak/flatpak-builder.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
