--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,10 @@
 [package]
 name = flatpak-builder
-url = https://github.com/flatpak/flatpak-builder/releases/download/1.0.9/flatpak-builder-1.0.9.tar.xz
+url = https://github.com/flatpak/flatpak-builder/releases/download/1.0.11/flatpak-builder-1.0.11.tar.xz
 archives = 
 giturl = https://github.com/flatpak/flatpak-builder.git
+domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +19,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
@@ -37,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
