--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = flatpak-builder
-url = https://github.com/flatpak/flatpak-builder/releases/download/1.0.14/flatpak-builder-1.0.14.tar.xz
+url = https://github.com/flatpak/flatpak-builder/releases/download/1.2.0/flatpak-builder-1.2.0.tar.xz
 archives = 
 giturl = https://github.com/flatpak/flatpak-builder.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
