flatpak-builder: Autospec creation for update from version 1.2.2 to version 1.2.3
Nelson Benitez Leon (1):
      Automatically detect default branch name instead of harcoding 'master' (#455)

Patrick Griffis (2):
      doc: Document git default branch behavior
      Bump version to 1.2.3

Phaedrus Leeds (1):
      Fix a typo in a terminal title

Weng Xuetian (1):
      Allow use file protocol when update submodule.

gasinvein (1):
      json-schema: Handle have-kernel-module- condition

Changes in 1.2.3
================

This is a minor bug-fix release that fixes cloning `file://` URIs with
git 2.38.1 or newer.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = flatpak-builder
-url = https://github.com/flatpak/flatpak-builder/releases/download/1.2.2/flatpak-builder-1.2.2.tar.xz
+url = https://github.com/flatpak/flatpak-builder/releases/download/1.2.3/flatpak-builder-1.2.3.tar.xz
 archives = 
 giturl = https://github.com/flatpak/flatpak-builder.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
